<resources>
    <string name="app_name">三小兴</string>
    <string name="month_out">本月支出</string>
    <string name="month_in">本月收入</string>
    <string name="budget">预算剩余</string>
    <string name="set_budget">设置剩余</string>
    <string name="chart">查看图标分析</string>
    <string name="add_remarks">添加备注</string>
    <string name="remarks">备注</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="input_time">输入时间</string>
    <string name="maohao">:</string>
    <string name="search">搜索</string>
    <string name="search_empty">没搜到，再找找</string>
    <string name="back">备份</string>
    <string name="setting">设置</string>
    <string name="history">历史记录</string>
    <string name="account_info">账单详情</string>
    <string name="backup">备份</string>
    <string name="restore">恢复</string>
    <string name="history_record">账单记录</string>
    <string name="history_info">本月账单记录</string>
    <string name="clear_all">清除所有记录</string>
    <string name="out">支出</string>
    <string name="in">收入</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="not_data">啥都没有</string>

</resources>