<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/grey">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialog_more_btn_back"
            style="@style/dialogmoreStyle"
            android:drawableTop="@mipmap/backos"
            android:text="@string/back"/>
        <Button
            android:id="@+id/dialog_more_btn_setting"
            style="@style/dialogmoreStyle"
            android:drawableTop="@mipmap/setting"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/setting"/>
        <Button
            android:id="@+id/dialog_more_btn_history"
            style="@style/dialogmoreStyle"
            android:drawableTop="@mipmap/history"
            android:text="@string/history"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="3">
        <Button
            android:id="@+id/dialog_more_btn_info"
            style="@style/dialogmoreStyle"
            android:drawableTop="@mipmap/chart"
            android:text="@string/account_info"
            android:layout_marginRight="30dp"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/dialog_more_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_close_24"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

</LinearLayout>